adding basic layout

--- a/less/dungeon.ci.less
+++ b/less/dungeon.ci.less
@@ -3,3 +3,34 @@ body
 
 body
 { background-color:black; }
+
+canvas, aside, footer
+{ margin:1em; }
+
+canvas, aside, footer
+{ border:solid 1px red; }
+
+canvas
+{ width:70%; }
+
+aside
+{ width:20%; }
+
+body,footer
+{ width:95%; }
+
+body
+{ height: 100%; }
+
+canvas, aside
+{ height:80%; }
+
+footer
+{ height:10%; }
+
+aside
+{ float:right; }
+
+aside,footer
+{ display: block; }
+
