Adding in fabric

--- a/less/dungeon.ci.less
+++ b/less/dungeon.ci.less
@@ -2,8 +2,13 @@ body
 { margin:0; }
 
 body
+{ color:white; }
+
+body
 { background-color:black; }
 
+header
+{ margin:auto; }
 canvas, aside, footer
 { margin:1em; }
 
